--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "seed:demo": "node scripts/seed-demo-data.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": ["pet-care", "api", "mobile-app", "uk", "pets", "health", "services"],
