feat: Add comprehensive VS Code development setup
- Add detailed VSCODE_LOCAL_DEPLOYMENT.md guide with step-by-step instructions
- Create environment template files (.env.example, pwa/.env.local.example)
- Add automated quick-start setup script with dependency checking
- Configure VS Code workspace settings for optimal development experience
- Add recommended extensions list for VS Code
- Create debug configurations for API server and demo data seeding
- Add VS Code tasks for common operations (install, start servers, seed data)
- Update package.json with convenient development scripts
- Include troubleshooting guide and mobile testing instructions
- Ready for easy local deployment in VS Code environment

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "seed:demo": "node scripts/seed-demo-data.js",
+    "setup": "node scripts/quick-start.js",
+    "install:all": "npm install && cd pwa && npm install && cd ../admin && npm install",
+    "clean": "rm -rf node_modules package-lock.json pwa/node_modules pwa/package-lock.json admin/node_modules admin/package-lock.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": ["pet-care", "api", "mobile-app", "uk", "pets", "health", "services"],
