--- a/.env.example
+++ b/.env.example
@@ -1,50 +1,39 @@
-# Pet Care API Environment Variables
+# Pet Care Platform - Environment Configuration
+# Copy this file to .env and update the values
 
 # Server Configuration
-PORT=3000
 NODE_ENV=development
+PORT=3000
 
-# Database Configuration (PostgreSQL connection for compatibility)
-DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_NAME=petcare_development
-DB_USER=postgres
-DB_PASSWORD=OxJtcGgS
-
-# MongoDB Configuration (Alternative NoSQL database)
+# Database Configuration
+# For Local MongoDB (uncomment and use this):
 MONGODB_URI=mongodb://localhost:27017/petcare
 
+# For MongoDB Atlas (replace with your connection string):
+# MONGODB_URI=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/petcare?retryWrites=true&w=majority
+
 # JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-change-in-production
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-make-it-long-and-random
 JWT_EXPIRES_IN=7d
 
-# Redis Configuration (Session and caching)
-REDIS_HOST=127.0.0.1
-REDIS_PORT=6379
-REDIS_PASSWORD=tVKBcYKu
-
-# External API Keys
-STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
-STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
+# Email Configuration (Optional - for production features)
+EMAIL_FROM=noreply@petcare.uk
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_USERNAME=your-email-username
+EMAIL_PASSWORD=your-email-password
 
 # File Upload Configuration
-MAX_FILE_SIZE=10485760
-UPLOAD_FOLDER=uploads
+MAX_FILE_UPLOAD=1000000
+FILE_UPLOAD_PATH=./public/uploads
 
-# Email Configuration (for notifications)
-EMAIL_SERVICE=gmail
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASSWORD=your-app-password
+# Frontend URLs
+CLIENT_URL=http://localhost:3002
+ADMIN_URL=http://localhost:3001
 
-# Push Notifications
-FCM_SERVER_KEY=your-firebase-server-key
+# CORS Configuration
+CORS_ORIGIN=http://localhost:3002,http://localhost:3001
 
-# External Services
-GOOGLE_MAPS_API_KEY=your-google-maps-api-key
-TWILIO_ACCOUNT_SID=your-twilio-account-sid
-TWILIO_AUTH_TOKEN=your-twilio-auth-token
-
-# UK Specific Configuration
-DEFAULT_COUNTRY=UK
-DEFAULT_CURRENCY=GBP
-DEFAULT_TIMEZONE=Europe/London
+# Rate Limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
